# MDPSolver

./: .gitattributes  .gitignore  .gitmodules  CBMexampleProb_N2_L5.txt  CBMmodel.cpp  CBMmodel.h  CMakeLists.txt  CompilerNotes  LICENSE  LICENSE.txt  Model.h  ModelType.h  ModifiedPolicyIteration.cpp  ModifiedPolicyIteration.h  ModuleInterface.cpp  ModuleInterface.h  PythonModule.cpp  README.md  RFunctions.cpp  Rewards.cpp  TBMmodel.cpp  TBMmodel.h  TransitionMatrix.cpp  TransitionMatrix.h  ValueVector.cpp  build_and_test_linux.sh  build_and_test_windows.bat  main.cpp  modifiedPolicyIteration.cpp  modifiedPolicyIteration.h  pCompMat.csv
CPP_Source_Code/: CBMmodel.cpp  CBMmodel.h  CMakeLists.txt  GeneralMDPmodel.cpp  GeneralMDPmodel.h  ModelType.cpp  ModelType.h  ModifiedPolicyIteration.cpp  ModifiedPolicyIteration.h  ModuleInterface.cpp  ModuleInterface.h  Policy.cpp  Policy.h  PythonModule.cpp  Rewards.cpp  Rewards.h  TBMmodel.cpp  TBMmodel.h  TransitionMatrix.cpp  TransitionMatrix.h  ValueVector.cpp  main.cpp
CPP_Source_Code/templates/: MyModel.cpp  MyModel.h
Paper/: paper.bib  (+1 more)
Python/: ExampleScript.py  LICENSE  README.md  pyproject.toml
Python/mdpsolver/: cbmaid.py  model.py  tbmaid.py
Python/src/: ExampleScript.py  create_example_parameters.py  example2.py
Python/src/mdpsolver/: __init__.py  model.py  solvermodule.cp310-win_amd64.pyd  solvermodule.cp311-win_amd64.pyd  solvermodule.cp312-win_amd64.pyd  solvermodule.cp313-win_amd64.pyd
Python/tests/: example1.py  example2.py  example3.py  example_model.py  test1.py  test1_pip.py  test2.py  test2_pip.py
(+23 files in other folders)
