[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdpsolver"
version = "0.9.1"
authors = [
  { name="Anders Reenberg Andersen", email="andersra@live.dk" },
  { name="Jesper Fink Andersen", email="jfan@dtu.dk" },
]
description = "An efficient solver for Markov Decision Processes (MDPs)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/areenberg/MDPSolver"
Issues = "https://github.com/areenberg/MDPSolver/issues"